--- a/Libraries/GraphControl/GraphControl/GraphControl.csproj
+++ b/Libraries/GraphControl/GraphControl/GraphControl.csproj
@@ -35,6 +35,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DBGraphics.cs" />
     <Compile Include="GraphControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
