Refactored int 4 classes
git-svn-id: https://helmholtz.ucdenver.pvt/svn/Software/C%20Sharp@100 1a4e458a-7fe6-4c0f-a286-c717e70bd3bd

--- a/Libraries/GraphControl/GraphControl/GraphControl.csproj
+++ b/Libraries/GraphControl/GraphControl/GraphControl.csproj
@@ -4,7 +4,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{191795D7-22B0-4B66-8631-A741360825F3}</ProjectGuid>
+    <ProjectGuid>{B99E750E-EF0D-48B8-87A8-A09C90B35866}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>GraphControl</RootNamespace>
@@ -35,6 +35,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Axis.cs" />
+    <Compile Include="Boarder.cs" />
     <Compile Include="DBGraphics.cs" />
     <Compile Include="GraphControl.cs">
       <SubType>UserControl</SubType>
@@ -42,8 +44,12 @@
     <Compile Include="GraphControl.Designer.cs">
       <DependentUpon>GraphControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="GraphData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="GraphControl.resx">
