Renamed Boarder border
git-svn-id: https://helmholtz.ucdenver.pvt/svn/Software/C%20Sharp@101 1a4e458a-7fe6-4c0f-a286-c717e70bd3bd

--- a/Libraries/GraphControl/GraphControl/GraphControl.csproj
+++ b/Libraries/GraphControl/GraphControl/GraphControl.csproj
@@ -36,7 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Axis.cs" />
-    <Compile Include="Boarder.cs" />
+    <Compile Include="Border.cs" />
     <Compile Include="DBGraphics.cs" />
     <Compile Include="GraphControl.cs">
       <SubType>UserControl</SubType>
