Added Com Port Selection
git-svn-id: https://helmholtz.ucdenver.pvt/svn/Software/C%20Sharp@352 1a4e458a-7fe6-4c0f-a286-c717e70bd3bd

--- a/Programs/Hawk/Hawk/Hawk/Hawk.csproj
+++ b/Programs/Hawk/Hawk/Hawk/Hawk.csproj
@@ -40,6 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Arroyo Options.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Arroyo Options.Designer.cs">
+      <DependentUpon>Arroyo Options.cs</DependentUpon>
+    </Compile>
     <Compile Include="Arroyo Sweep Options.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,6 +70,10 @@
     <Compile Include="ICSconstants.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Arroyo Options.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>Arroyo Options.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Arroyo Sweep Options.resx">
       <SubType>Designer</SubType>
       <DependentUpon>Arroyo Sweep Options.cs</DependentUpon>
