--- a/Libraries/Lab.Drivers.Motors/Lab.Drivers.Motors.csproj
+++ b/Libraries/Lab.Drivers.Motors/Lab.Drivers.Motors.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{206E8042-B072-4E9F-87C4-BC3090C91E62}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ESP100Driver_ns</RootNamespace>
-    <AssemblyName>ESP100Driver</AssemblyName>
+    <RootNamespace>Lab.Drivers.Motors</RootNamespace>
+    <AssemblyName>Lab.Drivers.Motors</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,11 +30,31 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IAxis.cs" />
+    <Compile Include="MotorControlForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MotorControlForm.Designer.cs">
+      <DependentUpon>MotorControlForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Motors.cs" />
+    <Compile Include="ZaberDLLWrapper.cs" />
     <Compile Include="NewportESP100.cs" />
+    <Compile Include="NewportESP100Axis.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ZaberTLA.cs" />
+    <Compile Include="ZaberTLAAxis.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="MotorControlForm.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>MotorControlForm.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
