Modified to change namespace to Lab.Drivers.MultiOOIDLL_Wrapper
git-svn-id: https://helmholtz.ucdenver.pvt/svn/Software/C%20Sharp@581 1a4e458a-7fe6-4c0f-a286-c717e70bd3bd

--- a/Libraries/Lab.Drivers.MultiOOIDLL_Wrapper/MultiOOIDLL_Wrapper/Lab.Drivers.MultiOOIDLL_Wrapper.csproj
+++ b/Libraries/Lab.Drivers.MultiOOIDLL_Wrapper/MultiOOIDLL_Wrapper/Lab.Drivers.MultiOOIDLL_Wrapper.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{09EF300D-F56F-47F1-B19E-71BF1AF9B78C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MultiOOIDLL_Wrapper</RootNamespace>
-    <AssemblyName>MultiOOIDLL_Wrapper</AssemblyName>
+    <RootNamespace>Lab.Drivers.MultiOOIDLL_Wrapper</RootNamespace>
+    <AssemblyName>Lab.Drivers.MultiOOIDLL_Wrapper</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
