Added Function Chirp to output daq
git-svn-id: https://helmholtz.ucdenver.pvt/svn/Software/C%20Sharp@624 1a4e458a-7fe6-4c0f-a286-c717e70bd3bd

--- a/Programs/Squid/Squid/Squid.csproj
+++ b/Programs/Squid/Squid/Squid.csproj
@@ -41,6 +41,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AcquisitionController.cs" />
+    <Compile Include="Chirp Control.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Chirp Control.Designer.cs">
+      <DependentUpon>Chirp Control.cs</DependentUpon>
+    </Compile>
     <Compile Include="DataSeries.cs" />
     <Compile Include="Decimator.cs" />
     <Compile Include="ChopperMotorControl.cs">
@@ -57,6 +63,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Chirp Control.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>Chirp Control.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <SubType>Designer</SubType>
       <DependentUpon>MainForm.cs</DependentUpon>
