Added driver for the ASI LV4000 controller for a 3 axis stage.
git-svn-id: https://helmholtz.ucdenver.pvt/svn/Software/C%20Sharp@954 1a4e458a-7fe6-4c0f-a286-c717e70bd3bd

--- a/Libraries/Lab.Drivers.Motors.Test/Lab.Drivers.Motors.Test/Lab.Drivers.Motors.Test.csproj
+++ b/Libraries/Lab.Drivers.Motors.Test/Lab.Drivers.Motors.Test/Lab.Drivers.Motors.Test.csproj
@@ -44,6 +44,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ASILV4000AxisTestForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ASILV4000AxisTestForm.Designer.cs">
+      <DependentUpon>ASILV4000AxisTestForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ASI_LV4000TestForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +88,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="ASILV4000AxisTestForm.resx">
+      <DependentUpon>ASILV4000AxisTestForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ASI_LV4000TestForm.resx">
       <DependentUpon>ASI_LV4000TestForm.cs</DependentUpon>
     </EmbeddedResource>
