Added 2D scanning capability to Bullet. Added Matlab file save capability to Bullet.
git-svn-id: https://helmholtz.ucdenver.pvt/svn/Software/C%20Sharp@959 1a4e458a-7fe6-4c0f-a286-c717e70bd3bd

--- a/Programs/Bullet/Bullet/Bullet.csproj
+++ b/Programs/Bullet/Bullet/Bullet.csproj
@@ -107,6 +107,10 @@
       <Project>{206E8042-B072-4E9F-87C4-BC3090C91E62}</Project>
       <Name>Lab.Drivers.Motors</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\Libraries\Lab.FileIO\Lab.FileIO.csproj">
+      <Project>{6D2EAFF2-D9AA-48E2-AF4B-7EA6B396DE14}</Project>
+      <Name>Lab.FileIO</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\Libraries\Lab.Math\Lab.Math.csproj">
       <Project>{B1ABFB43-C135-45EE-B048-310B72895DCA}</Project>
       <Name>Lab.Math</Name>
