--- a/Programs/Beluga/Beluga/Beluga.csproj
+++ b/Programs/Beluga/Beluga/Beluga.csproj
@@ -33,6 +33,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>MainIcon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Expression.Encoder, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=x86" />
     <Reference Include="Microsoft.Expression.Encoder.Types, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=x86" />
@@ -63,13 +66,15 @@
       <DependentUpon>BelugaMainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="AcqController.cs" />
+    <Compile Include="DataSeries.cs" />
+    <Compile Include="DataLocation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TwoDGraphControl.cs">
-      <SubType>UserControl</SubType>
+    <Compile Include="TransparentForm.cs">
+      <SubType>Form</SubType>
     </Compile>
-    <Compile Include="TwoDGraphControl.Designer.cs">
-      <DependentUpon>TwoDGraphControl.cs</DependentUpon>
+    <Compile Include="TransparentForm.Designer.cs">
+      <DependentUpon>TransparentForm.cs</DependentUpon>
     </Compile>
     <Compile Include="VideoPreviewForm.cs">
       <SubType>Form</SubType>
@@ -80,9 +85,6 @@
     <EmbeddedResource Include="BelugaMainForm.resx">
       <DependentUpon>BelugaMainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="TwoDGraphControl.resx">
-      <DependentUpon>TwoDGraphControl.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -92,10 +94,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TransparentForm.resx">
+      <DependentUpon>TransparentForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="VideoPreviewForm.resx">
       <DependentUpon>VideoPreviewForm.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -131,6 +135,13 @@
       <Project>{F638D4F9-30DC-417A-BFC9-52FF19872157}</Project>
       <Name>Lab.Drivers.PVCAM_Wrapper.Test</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\Libraries\Microsoft.Win32.Hooks\Microsoft.Win32.Hooks.csproj">
+      <Project>{29588A04-98E8-41AC-A5C3-CEADEE7776CB}</Project>
+      <Name>Microsoft.Win32.Hooks</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="MainIcon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
