Newest version of Beluga with text message send.
git-svn-id: https://helmholtz.ucdenver.pvt/svn/Software/C%20Sharp@1095 1a4e458a-7fe6-4c0f-a286-c717e70bd3bd

--- a/Programs/Beluga/Beluga/Beluga.csproj
+++ b/Programs/Beluga/Beluga/Beluga.csproj
@@ -124,6 +124,10 @@
       <Project>{B99E750E-EF0D-48B8-87A8-A09C90B35866}</Project>
       <Name>GraphControl</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\Libraries\Lab.Communications\Lab.Communications\Lab.Communications.csproj">
+      <Project>{576AD9A0-DCB9-4AD6-8DCF-53FBAE6C24BD}</Project>
+      <Name>Lab.Communications</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\Libraries\Lab.Drivers.ARC_SpectraProDLL_Wrapper.Test\Lab.Drivers.ARC_SpectraProDLL_Wrapper.Test\Lab.Drivers.ARC_SpectraProDLL_Wrapper.Test.csproj">
       <Project>{FFFC3817-55E6-4E09-8956-999CBA2BEF1A}</Project>
       <Name>Lab.Drivers.ARC_SpectraProDLL_Wrapper.Test</Name>
