--- a/Libraries/Lab.Communications/Lab.Communications/Lab.Communications.csproj
+++ b/Libraries/Lab.Communications/Lab.Communications/Lab.Communications.csproj
@@ -46,14 +46,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SendSTMP.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SendSTMP.Designer.cs">
-      <DependentUpon>SendSTMP.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SendSMTP.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SendSMTP.Designer.cs">
+      <DependentUpon>SendSMTP.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -63,8 +63,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="SendSTMP.resx">
-      <DependentUpon>SendSTMP.cs</DependentUpon>
+    <EmbeddedResource Include="SendSMTP.resx">
+      <DependentUpon>SendSMTP.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
